fix(STYLE): Make game doesnt overflow

--- a/front/src/style/play/Game.css
+++ b/front/src/style/play/Game.css
@@ -31,7 +31,8 @@
 }
 
 .game-canvas {
-	width: 100%;
+	width: 90%;
+	margin-left: 5%;
 	aspect-ratio: 16/9;
 	background-color: #d9d9d9;
 }
